<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_12"
        android:layout_marginHorizontal="@dimen/_13sdp"
        android:fontFamily="@font/lato_bold"
        android:includeFontPadding="false"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/txt_currentvalue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:text="000"
        android:paddingStart="@dimen/_13sdp"
        android:gravity="center_vertical"
        android:background="@drawable/bg_et_shape"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_13sdp"
        android:fontFamily="@font/lato_regular"
        android:includeFontPadding="false"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_3"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_13sdp"
        android:fontFamily="@font/lato_bold"
        android:includeFontPadding="false"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/black" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_et_shape"
            android:layout_marginHorizontal="@dimen/_13sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_13sdp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_13"
                    android:layout_weight="0.6"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:id="@+id/txt_AmountInvested"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="5000"
                    android:fontFamily="@font/lato_regular"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.6"
                    android:text="@string/text_14"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:id="@+id/txt_accpetdamt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_weight="1"
                    android:text="6000"
                    android:fontFamily="@font/lato_regular"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_13sdp"
                android:layout_marginVertical="@dimen/_10sdp"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_9"
                    android:layout_weight="0.6"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:id="@+id/txt_wealthgain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="10000"
                    android:fontFamily="@font/lato_regular"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/btn_details"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_13sdp"
            android:backgroundTint="@color/orange"
            android:layout_marginHorizontal="@dimen/_13sdp"
            android:background="@drawable/bg_et_shape"
            android:gravity="center"
            android:fontFamily="@font/lato_bold"
            android:textSize="@dimen/_16ssp"
            android:text="@string/text_15"
            android:textColor="@color/white" />
    </LinearLayout>

