<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rel_popup"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corner_white_background"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/text_4"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_close"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="7dp"
                android:padding="@dimen/_5sdp"
                android:text="X"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_aboutus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/txt_aboutus"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_shareapp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="3dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/text_6"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_rateapp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="3dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/text_5"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_ourOtherApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="3dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Our Other App"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/transparent" />
    </LinearLayout>
</RelativeLayout>
